--- a/package.json
+++ b/package.json
@@ -34,22 +34,32 @@
     "/postgres-data"
   ],
   "dependencies": {
+    "@heroicons/react": "^2.0.14",
     "@prisma/client": "^4.9.0",
+    "@radix-ui/react-checkbox": "^1.0.1",
+    "@radix-ui/react-dialog": "^1.0.2",
+    "@radix-ui/react-dropdown-menu": "^2.0.2",
+    "@radix-ui/react-select": "^1.2.0",
     "@remix-run/express": "^1.11.1",
     "@remix-run/node": "^1.11.1",
     "@remix-run/react": "^1.11.1",
     "@remix-run/server-runtime": "^1.11.1",
     "bcryptjs": "^2.4.3",
+    "clsx": "^1.2.1",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
     "express-prometheus-middleware": "^1.2.0",
+    "framer-motion": "^9.0.0",
     "isbot": "^3.6.5",
     "morgan": "^1.10.0",
     "prom-client": "^14.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tiny-invariant": "^1.3.1"
+    "react-use-measure": "^2.1.1",
+    "remix-utils": "^6.0.0",
+    "tiny-invariant": "^1.3.1",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
