--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "morgan": "^1.10.0",
     "prom-client": "^14.1.1",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-use-measure": "^2.1.1",
     "remix-utils": "^6.0.0",
@@ -98,6 +100,7 @@
     "prettier-plugin-tailwindcss": "^0.2.1",
     "prisma": "^4.9.0",
     "start-server-and-test": "^1.15.2",
+    "tailwind-scrollbar": "^2.1.0",
     "tailwindcss": "^3.2.4",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.2",
